k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-game
  labels:
    app: web-game
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: web-game
