k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-game-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-game-ip  # Will be created in deployment script
    networking.gke.io/managed-certificates: web-game-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-game
            port:
              number: 80
